# stm32-programming

./: README.md
blink-led/: Cargo.toml  memory.x  nucleo.x
blink-led/.cargo/: config.toml
blink-led/src/: main.rs
pov-toy/: Cargo.toml
pov-toy/.cargo/: config.toml
pov-toy/src/: main.rs
