[package]
name = "blink-led"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = { version = "0.7.1", features = ["device"] }
nb = "1.0.0"
panic-halt = "0.2"
stm32f3xx-hal = { version = "0.9.1", features = ["rt", "stm32f302x8"]}

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = true
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false